# voluble-telegram-cpp

./: .cirrus.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md  VolubleTelegramClientConfig.h.in  logger.cpp  logger.h  telegram.cpp
.ci/: Dockerfile
server/: server.cpp  server.h
server/database_manager/: User.cpp  User.h  database_exceptions.h  database_manager.cpp  database_manager.h
server/telegram_client/: UserManager.cpp  UserManager.h  telegram_client.cpp  telegram_client.h
server/telegram_client/handlers/: authorization_handler.cpp  authorization_handler.h  connectionstate_handler.cpp  connectionstate_handler.h  option_handler.cpp  option_handler.h
